<resources>
    <string name="app_name">AppAssist</string>
    <string name="applications_list">Applications:</string>
    <string name="row_placeholder">RowPlaceholder</string>
    <string name="placeholder">Placeholder</string>
    <string name="loading">Loading…</string>
    <string name="title_calendar">Calendar Tasks:</string>
    <string name="select_option_heading">Select an option:</string>
    <string name="question_tutorial_type">What type of Tutorial would you like?</string>
    <string name="text_activate_color_blind">Activate Color Blind Mode</string>
    <string name="text_activate_vibrate">Activate Vibrate Mode</string>
    <string name="text_activate_speech_recognition">Activate Speech Recognition</string>
    <string name="text_tutorial_continue">To add an event click the red plus sign in the lower left. Click the arrow on the bottom right to continue the tutorial.</string>
    <string name="calendar_stage_one">Clicking this arrow opens the event button, which allows your create either an event, task, reminder or goal.</string>
    <string name="calendar_stage_two">Here we will be selecting an event to show what to do when trying to set an event on your calendar.</string>
    <string name="calendar_stage_three">Set a title for your event, once the title is set click the tick in the bottom right to save the event. Thats the end of the tutorial.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="play_video">Play Video Button</string>
    <string name="information">Information Button</string>

    <!-- Contacts -->
    <string name="application_contacts">Contacts</string>
    <string name="contacts_stage_one">To add a contact, click on the + symbol.</string>
    <string name="contacts_stage_two">Fill out your desired fields for your contact.</string>
    <string name="contacts_stage_three">Apply this contact by pressing the save button.</string>
    <string name="contacts_title">Contacts Tasks:</string>
    <string name="date_popup_title">What date would like to see?</string>
    <string name="dd_mm_yyyy">dd-mm-yyyy</string>
    <string name="go">Go</string>
    <string name="contact_popup_title">Contact Name?</string>
    <string name="to_open_the_gallery_press_the_gallery_icon">To open the gallery press the gallery icon.</string>
    <string name="select_a_photo_to_open_the_photo_in_a_larger_space">Select a photo to open the photo in a larger space.</string>
    <string name="title_gallery">Gallery Tasks:</string>
    <string name="this_is_the_end_of_this_tutorial">This is the end of this tutorial.</string>
    <string name="alarm_clock">Clock Tasks:</string>
    <array name="tutorial_length_options">
        <item>Long Tutorial</item>
        <item>No Tutorial</item>
    </array>

    <!-- Clock -->
    <string name="clock_tutorial">Clock Tutorial</string>
    <string name="clock_stage_one">Press the + button to add a new alarm.</string>
    <string name="clock_stage_two">Press on your chosen hour within the clock face. The selected hour will be highlighted in blue.</string>
    <string name="clock_stage_three">Hold and drag toward the chosen minutes within the clock face. Select either AM or PM and press OK to set the alarm.</string>
    <string name="clock_stage_four">This displays the information of your set alarm with options to repeat, set a custom alarm sound, label and delete the alarm.</string>
    <string name="clock_quick_timers_title">Quick Timers</string>
    <string-array name="clock_quick_timer_options">
        <item>01 Minute</item>
        <item>05 Minutes</item>
        <item>10 Minutes</item>
        <item>15 Minutes</item>
        <item>20 Minutes</item>
        <item>30 Minutes</item>
        <item>45 Minutes</item>
        <item>60 Minutes</item>
    </string-array>
    <string name="firstname_lastname">First Name - Last Name</string>
    <string name="settings_cog">Settings Cog</string>
    <string name="help_button">Help!</string>
    <string name="done_button_text">Done</string>
    <string name="help_app_button_text">To select an application to use, tap these buttons:</string>
    <string name="help_info_button_text">For information about the application, tap these buttons:</string>
    <string name="help_video_button_text">To watch a tutorial video, tap these buttons:</string>
    <string name="help_settings_button_text">To change the settings, tap this button:</string>
</resources>