<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="250dp"
    android:layout_gravity="center"
    android:background="@color/color_accent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/view_contact_prompt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:text= "@string/contact_popup_title"
        android:textAlignment="center"
        android:textColor="@color/color_text"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/edit_contact_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/firstname_lastname"
        android:inputType="text"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textColorHint="@color/color_text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:text="Cancel" />

        <Button
            android:id="@+id/button_go"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:text="@string/go" />
    </LinearLayout>

</LinearLayout>